--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": "https://github.com/DeepzUa/multer-oracle-buckets",
   "author": "Pavlo Chmykh",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "typescript": "4.7.4"
+  }
 }
