--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "multer": "1.4.5-lts.1",
     "oci-common": "2.38.0",
-    "oci-objectstorage": "2.38.0"
+    "oci-objectstorage": "2.38.0",
+    "uuid": "8.3.2"
   }
 }
