--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "devDependencies": {
     "@types/multer": "^1.4.7",
+    "@types/uuid": "8.3.4",
     "typescript": "4.7.4"
   },
   "dependencies": {
