--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "multer-oracle-buckets",
   "version": "1.0.0",
   "description": "multer storage engine for oracle cloud buckets",
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": "https://github.com/DeepzUa/multer-oracle-buckets",
   "author": "Pavlo Chmykh",
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@types/multer": "^1.4.7",
+    "@types/multer": "1.4.7",
     "@types/uuid": "8.3.4",
     "typescript": "4.7.4"
   },
