--- a/package.json
+++ b/package.json
@@ -7,6 +7,18 @@
   "author": "Pavlo Chmykh",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "tsc"
+  },
+  "keywords": [
+    "multer",
+    "node",
+    "oracle",
+    "buckets",
+    "oci",
+    "cloud",
+    "storage"
+  ],
   "devDependencies": {
     "@types/multer": "1.4.7",
     "@types/uuid": "8.3.4",
