--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "@jorgeferrero/stream-to-buffer": "2.0.6",
     "multer": "1.4.5-lts.1",
     "oci-common": "2.38.0",
     "oci-objectstorage": "2.38.0",
